--- a/main.css
+++ b/main.css
@@ -1,13 +1,32 @@
 html, body {
     height: 100%;
     margin: 0;
+    background-color: #c0c0c0;
 }
 
-canvas {
-    display: block;
+.info {
+    margin: 1em;
+    padding: 0px 1em;
+    border: solid 1pt #e0e0e0;
+    background-color: #a0a0a0;
 }
 
 .error {
     color: red;
     font-weight: bold;
+}
+
+#inputRoot {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+.horizontal {
+    display: flex;
+    flex-direction: row;
+}
+
+canvas {
+    display: block;
 }
