--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ html, body {
     height: 100%;
     margin: 0;
     background-color: #c0c0c0;
+    font-family: sans-serif;
 }
 
 .info {
@@ -34,4 +35,82 @@ html, body {
 
 canvas {
     display: block;
+}
+
+.dimmer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    background-color: black;
+    z-index: 10;
+}
+
+.hidden {
+    display: none;
+}
+
+.messageBox {
+    position: absolute;
+    z-index: 20;
+    width: 80vw;
+    height: 80vh;
+    top: 10vw;
+    left: 10vh;
+}
+
+.messageBoxHeader {
+    border-top-left-radius: 0.75em;
+    border-top-right-radius: 0.75em;
+    background-color: #d0d0d0;
+    color: black;
+    font-weight: bold;
+    text-align: center;
+    padding: 0.5em;
+}
+
+.messageBoxCloseButton {
+    float: right;
+    margin: 0px;
+}
+
+.messageBoxBody {
+    border-bottom-left-radius: 0.75em;
+    border-bottom-right-radius: 0.75em;
+    border: 1px solid #d0d0d0;
+    padding: 1em;
+    background-color: black;
+    color: #d0d0d0;
+    height: 75vh;
+    overflow: auto;
+}
+
+button, input {
+    border-radius: 0.3em;
+    border: 1px solid #808080;
+    margin: 2pt;
+}
+
+button:hover:enabled, button:focus {
+    background-color: #606060;
+}
+
+button:active:enabled {
+    color:#d0d0d0;
+    background-color: #808080;
+}
+
+button:disabled {
+    color: #202020;
+    border: 1px solid #808080;
+}
+
+blockquote {
+    font-style: italic;
+}
+
+h1 {
+    margin-top: 0px;
 }
