--- a/main.css
+++ b/main.css
@@ -54,11 +54,13 @@ canvas {
 
 .messageBox {
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
     z-index: 20;
-    width: 80vw;
-    height: 80vh;
-    top: 10vw;
-    left: 10vh;
+    min-width: 30em;
+    max-width: 40em;
 }
 
 .messageBoxHeader {
@@ -109,6 +111,16 @@ button:disabled {
 
 blockquote {
     font-style: italic;
+}
+
+blockquote footer {
+    margin-top: 0.5em;
+    font-style: normal;
+    text-align: right;
+}
+
+blockquote footer:before {
+    content: "\002014\0000a0";
 }
 
 h1 {
