--- a/main.css
+++ b/main.css
@@ -1,15 +1,63 @@
 html, body {
-    height: 100%;
+    height: 100vh;
     margin: 0;
-    background-color: #c0c0c0;
+    background-color: #202020;
+    color: #c0c0c0;
     font-family: sans-serif;
 }
 
-.info {
-    margin: 1em;
-    padding: 0px 1em;
-    border: solid 1pt #e0e0e0;
-    background-color: #a0a0a0;
+#root {
+    max-width: 60em;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    
+    height: 100vh;
+
+    border-left: 1px solid #808080;
+    border-right: 1px solid #808080;
+}
+
+#left {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    border-right: 0.1em;    
+    white-space: nowrap;
+}
+
+#right {
+    flex-grow: 1;
+    border-left: 1px solid #808080;
+    padding: 0.5em;
+}
+
+.header {
+    background-color: #d0d0d0;
+    color: #202020;
+    text-align: center;
+    font-weight: bold;
+}
+
+button.option {
+    border-radius: 0;
+    border: 0;
+    margin: 0;
+    background-color: #202020;
+    color: #c0c0c0;
+    font-size: 100%;
+    padding: 0.1em;
+    text-align: left;
+}
+
+button.option.selected {
+    background-color: #404040;
+}
+
+button.option:hover:enabled {
+    background-color: #c0c0c0;
+    color: #202020;
 }
 
 .error {
@@ -17,20 +65,9 @@ html, body {
     font-weight: bold;
 }
 
-#inputRoot {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-}
-
 .inputCodeRoot {
     height: 600px;
     border: solid 1px #e0e0e0;
-}
-
-.horizontal {
-    display: flex;
-    flex-direction: row;
 }
 
 canvas {
