Add scrollbars, if needed

--- a/main.css
+++ b/main.css
@@ -12,6 +12,7 @@ html, body {
     display: flex;
     flex-direction: row;
     align-items: stretch;
+    overflow: auto;
     
     height: 100vh;
 
